# ChangeLog
All notable changes to this project will be documented in this file.
Todas as mudanças notáveis neste projeto serão documentadas neste arquivo.


## [ 2.3 ] - 2022-02-20 #############################################

### Added / Adicionado
 - Translator Support.
###

### Changed / Modificado
 - Changed install.sh for start webapp using nvidia driver.
 - Search for new messages every 800 ms.
 - Search for new messages in a new process using multitreading.
###

### Fixed / Corrigido
 - Fixed settings for select checkbox to check update.
###

#####################################################################


## [ 2.2 ] - 2022-01-08 #############################################

### Added / Adicionado
 - One click on the tray icon to show or hide the window.
 - Added update check.
###

#####################################################################


## [ 2.1 ] - 2021-12-26 #############################################

### Added / Adicionado
 - Autodetect language.
###

### Fixed / Corrigido
 - Actions after loaded webapp.
###

#####################################################################


## [ 2.0 ] - 2021-12-22 #############################################

### Added / Adicionado
 - Files and Sources:
    - Added RELEASE file.
    - Added mp3 files in sound folder.
    - Created notify.py in src folder.
 - Code:
    - Added application name.
    - Added notifications sound to new messages.
    - Added options for notifications in settings.
    - Added dark mode options for use in others webapps.
###

### Changed / Modificado
 - Files and Sources:
    - Rename whats.py to main.py in src.
 - Code:
    - Refactory code.
    - Modify About.
    - Created 'prevent' function for prevent outdated browser.
    - Importation of modules optimized.
    - Using variable for user agent.
    - Apply settings emiting signals.
 - Changed creation settings.json file.
###

### Removed / Removido
 - Files and Sources:
    - Removed 'warning.py'.