@@ -7,6 +7,7 @@ Todas as mudanças notáveis neste projeto serão documentadas neste arquivo.
 
 ### Added / Adicionado
  - Translator Support.
+ - Options for test notification sound selected.
 ###
 
 ### Changed / Modificado
